Update header intro text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="main-container">
   <header>
       <h1>i am shovan</h1>
-      <h2>i am front end web developer</h2>
+      <h2>i am a front end web developer</h2>
       <img class="round-photo" src="resources/img/profile.png" alt="Shovan's photo">
     </header>
 
